Creación de carpeta para imagenes.

--- a/Vmfg_Cfdi_Sifei/Vmfg_Cfdi_Sifei.vbproj
+++ b/Vmfg_Cfdi_Sifei/Vmfg_Cfdi_Sifei.vbproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Clases\" />
+    <Folder Include="Img\" />
     <Folder Include="Modulos\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
