--- a/Vmfg_Cfdi_Sifei/Vmfg_Cfdi_Sifei.vbproj
+++ b/Vmfg_Cfdi_Sifei/Vmfg_Cfdi_Sifei.vbproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clases\clsIni.vb" />
+    <Compile Include="Controlador\FacturaController.vb" />
     <Compile Include="Controlador\SelloController.vb" />
     <Compile Include="Inicio.vb">
       <SubType>Form</SubType>
@@ -82,6 +83,8 @@
       <DependentUpon>Inicio.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Modelo\DetalleFacturaModel.vb" />
+    <Compile Include="Modelo\FacturaModel.vb" />
     <Compile Include="Modelo\SelloModel.vb" />
     <Compile Include="Modulos\modHome.vb" />
     <Compile Include="Modulos\modMssql.vb" />
@@ -100,6 +103,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Vistas\formFacturaTxt.Designer.vb">
+      <DependentUpon>formFacturaTxt.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\formFacturaTxt.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Vistas\formSellos.Designer.vb">
       <DependentUpon>formSellos.vb</DependentUpon>
     </Compile>
@@ -116,6 +125,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\formFacturaTxt.resx">
+      <DependentUpon>formFacturaTxt.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\formSellos.resx">
       <DependentUpon>formSellos.vb</DependentUpon>
