--- a/Vmfg_Cfdi_Sifei/Vmfg_Cfdi_Sifei.vbproj
+++ b/Vmfg_Cfdi_Sifei/Vmfg_Cfdi_Sifei.vbproj
@@ -14,6 +14,7 @@
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,7 +48,11 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Img\Receivable.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=8.1.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -76,6 +81,7 @@
     <Compile Include="Clases\clsIni.vb" />
     <Compile Include="Controlador\FacturaController.vb" />
     <Compile Include="Controlador\SelloController.vb" />
+    <Compile Include="Controlador\UuidController.vb" />
     <Compile Include="Inicio.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -86,12 +92,14 @@
     <Compile Include="Modelo\DetalleFacturaModel.vb" />
     <Compile Include="Modelo\FacturaModel.vb" />
     <Compile Include="Modelo\SelloModel.vb" />
+    <Compile Include="Modelo\UuidModel.vb" />
     <Compile Include="Modulos\modHome.vb" />
     <Compile Include="Modulos\modMssql.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
