--- a/Vmfg_Cfdi_Sifei/Vmfg_Cfdi_Sifei.vbproj
+++ b/Vmfg_Cfdi_Sifei/Vmfg_Cfdi_Sifei.vbproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clases\clsIni.vb" />
+    <Compile Include="Controlador\ComPagoController.vb" />
     <Compile Include="Controlador\FacturaController.vb" />
     <Compile Include="Controlador\SelloController.vb" />
     <Compile Include="Controlador\UuidController.vb" />
@@ -89,6 +90,7 @@
       <DependentUpon>Inicio.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Modelo\ComPagoModel.vb" />
     <Compile Include="Modelo\DetalleFacturaModel.vb" />
     <Compile Include="Modelo\FacturaModel.vb" />
     <Compile Include="Modelo\SelloModel.vb" />
@@ -110,6 +112,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="Vistas\formComPagoTxt.Designer.vb">
+      <DependentUpon>formComPagoTxt.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\formComPagoTxt.vb">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Vistas\formFacturaTxt.Designer.vb">
       <DependentUpon>formFacturaTxt.vb</DependentUpon>
