Complemento de pago | DetalleComPagoModel
Se concluye con los SP, el ComPagoModel, DetalleComPago y se trabaja con el MenuStrip para el complemento de pago txt

--- a/Vmfg_Cfdi_Sifei/Vmfg_Cfdi_Sifei.vbproj
+++ b/Vmfg_Cfdi_Sifei/Vmfg_Cfdi_Sifei.vbproj
@@ -91,6 +91,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Modelo\ComPagoModel.vb" />
+    <Compile Include="Modelo\DetalleComPagoModel.vb" />
     <Compile Include="Modelo\DetalleFacturaModel.vb" />
     <Compile Include="Modelo\FacturaModel.vb" />
     <Compile Include="Modelo\SelloModel.vb" />
